Added home page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">DalBike</string>
     <string name="book_button">Book</string>
+    <string name="title_activity_home_activity">home_activity</string>
 </resources>
