--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">DalBike</string>
     <string name="book_button">Book</string>
     <string name="title_activity_home_activity">home_activity</string>
+    <string name="edittext_hint">Banner Id</string>
+    <string name="textview_hint">DOB</string>
 </resources>
